@@ -32,6 +32,7 @@ Small features:
     to be called when the watchdog is raised
   * Add STARPU_LIMIT_CPU_NUMA_MEM environment variable.
   * Add STARPU_WORKERS_GETBIND environment variable.
+  * Add STARPU_SCHED_SIMPLE_DECIDE_ALWAYS modular scheduler flag.
 
 StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
 ====================================================================
